--- a/index.html
+++ b/index.html
@@ -192,6 +192,131 @@
             transform: rotate(180deg);
         }
 
+        .mobile-menu-toggle {
+            display: none;
+            background: var(--bg-card);
+            border: 2px solid var(--border);
+            color: var(--text-primary);
+            width: 45px;
+            height: 45px;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 1.2rem;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.3s;
+        }
+
+        .mobile-menu-toggle:hover {
+            background: var(--primary);
+            color: white;
+            border-color: var(--primary);
+        }
+
+        .mobile-menu {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 280px;
+            height: 100vh;
+            background: var(--bg-secondary);
+            z-index: 2000;
+            transition: right 0.3s ease;
+            padding: 2rem;
+            box-shadow: -5px 0 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .mobile-menu.active {
+            right: 0;
+        }
+
+        .mobile-menu-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2rem;
+            padding-bottom: 1rem;
+            border-bottom: 2px solid var(--border);
+        }
+
+        .mobile-menu-header .logo {
+            font-size: 1.5rem;
+        }
+
+        .mobile-menu-close {
+            background: var(--bg-card);
+            border: 2px solid var(--border);
+            color: var(--text-primary);
+            width: 40px;
+            height: 40px;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 1.2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.3s;
+        }
+
+        .mobile-menu-close:hover {
+            background: var(--primary);
+            color: white;
+            border-color: var(--primary);
+        }
+
+        .mobile-menu-links {
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            gap: 0;
+        }
+
+        .mobile-menu-links li {
+            border-bottom: 1px solid var(--border);
+        }
+
+        .mobile-menu-links a {
+            display: block;
+            padding: 1rem 0;
+            color: var(--text-primary);
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 1.1rem;
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .mobile-menu-links a i {
+            width: 24px;
+            color: var(--primary);
+            font-size: 1.2rem;
+        }
+
+        .mobile-menu-links a:hover {
+            color: var(--primary);
+            padding-left: 0.5rem;
+        }
+
+        .mobile-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 1999;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s;
+        }
+
+        .mobile-overlay.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
         .hero {
             min-height: 100vh;
             display: flex;
@@ -796,70 +921,132 @@
         }
 
         @media (max-width: 768px) {
-            .profile-image {
-                width: 150px;
-                height: 150px;
-                margin-bottom: 1.5rem;
-                margin-top: 4rem;
+            .nav-container {
+                padding: 0 1rem;
             }
 
-            .hero-content h1 {
-                font-size: 2.5rem;
+            .logo {
+                font-size: 1.5rem;
             }
 
-            .hero-content .subtitle {
-                font-size: 1.3rem;
+            .theme-toggle {
+                width: 40px;
+                height: 40px;
+                font-size: 1rem;
             }
 
-            .section-title {
-                font-size: 2rem;
-            }
-
-            .about-content {
-                grid-template-columns: 1fr;
+            .mobile-menu-toggle {
+                display: flex;
             }
 
             .nav-links {
                 display: none;
             }
 
+            .profile-image {
+                width: 140px;
+                height: 140px;
+                margin-bottom: 1.5rem;
+                margin-top: 5rem;
+            }
+
+            .hero-content h1 {
+                font-size: 2rem;
+                line-height: 1.2;
+                padding: 0 1rem;
+            }
+
+            .hero-content .subtitle {
+                font-size: 1.1rem;
+                padding: 0 1rem;
+            }
+
+            .hero-content .description {
+                font-size: 0.95rem;
+                padding: 0 1rem;
+            }
+
+            .section-title {
+                font-size: 1.8rem;
+            }
+
+            .about-content {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
             .cta-buttons {
                 flex-direction: column;
+                width: 100%;
+                padding: 0 1rem;
+            }
+
+            .btn {
+                width: 100%;
+                justify-content: center;
+                padding: 0.9rem 2rem;
             }
 
             .hero-social {
                 flex-wrap: wrap;
+                gap: 1rem;
+                padding: 0 1rem;
             }
 
             .hero-social a {
-                width: 70px;
-                height: 70px;
-                font-size: 1.8rem;
+                width: 65px;
+                height: 65px;
+                font-size: 1.6rem;
             }
 
             .social-link-card {
-                padding: 1.5rem 2rem;
+                padding: 1.5rem 1.5rem;
                 width: 100%;
             }
-        }
 
-        .mobile-menu-toggle {
-            display: none;
-            background: var(--bg-card);
-            border: 2px solid var(--border);
-            color: var(--text-primary);
-            width: 45px;
-            height: 45px;
-            border-radius: 10px;
-            cursor: pointer;
-            font-size: 1.2rem;
-            align-items: center;
-            justify-content: center;
-        }
+            .social-link-card i {
+                font-size: 2.5rem;
+            }
 
-        @media (max-width: 768px) {
-            .mobile-menu-toggle {
-                display: flex;
+            section {
+                padding: 4rem 1rem;
+            }
+
+            .skills-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .projects-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .stats {
+                grid-template-columns: 1fr;
+            }
+
+            .stat-card {
+                padding: 1.5rem;
+            }
+
+            .contact-info {
+                grid-template-columns: 1fr;
+            }
+
+            .main-social-links {
+                flex-direction: column;
+            }
+
+            .tech-tags {
+                justify-content: center;
+            }
+
+            .project-links {
+                justify-content: center;
+            }
+
+            footer {
+                padding: 2rem 1rem;
+                font-size: 0.9rem;
             }
         }
     </style>
@@ -882,12 +1069,31 @@
                 <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
                     <i class="fas fa-moon"></i>
                 </button>
-                <button class="mobile-menu-toggle" aria-label="Menu">
+                <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Menu">
                     <i class="fas fa-bars"></i>
                 </button>
             </div>
         </div>
     </nav>
+
+    <div class="mobile-overlay" id="mobileOverlay"></div>
+    
+    <div class="mobile-menu" id="mobileMenu">
+        <div class="mobile-menu-header">
+            <div class="logo">YA</div>
+            <button class="mobile-menu-close" id="mobileMenuClose" aria-label="Close menu">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <ul class="mobile-menu-links">
+            <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
+            <li><a href="#education"><i class="fas fa-graduation-cap"></i> Education</a></li>
+            <li><a href="#skills"><i class="fas fa-code"></i> Skills</a></li>
+            <li><a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
+            <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+        </ul>
+    </div>
 
     <section id="home" class="hero">
         <div class="hero-content">
@@ -1258,6 +1464,35 @@
                 icon.className = 'fas fa-sun';
             }
         }
+
+        // Mobile Menu
+        const mobileMenuToggle = document.getElementById('mobileMenuToggle');
+        const mobileMenu = document.getElementById('mobileMenu');
+        const mobileMenuClose = document.getElementById('mobileMenuClose');
+        const mobileOverlay = document.getElementById('mobileOverlay');
+        const mobileMenuLinks = document.querySelectorAll('.mobile-menu-links a');
+
+        function openMobileMenu() {
+            mobileMenu.classList.add('active');
+            mobileOverlay.classList.add('active');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeMobileMenu() {
+            mobileMenu.classList.remove('active');
+            mobileOverlay.classList.remove('active');
+            document.body.style.overflow = '';
+        }
+
+        mobileMenuToggle.addEventListener('click', openMobileMenu);
+        mobileMenuClose.addEventListener('click', closeMobileMenu);
+        mobileOverlay.addEventListener('click', closeMobileMenu);
+
+        mobileMenuLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                closeMobileMenu();
+            });
+        });
 
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
